Fixed brand block overflow into footer. Carousel tweaks.

--- a/spfe/src/styles/components.css
+++ b/spfe/src/styles/components.css
@@ -21,6 +21,13 @@ other style sheets, but it works for prototyping.
   transition: all 250ms linear;
   -ms-overflow-style: none;  /* hide scrollbar in IE and Edge */
   scrollbar-width: none;  /* hide scrollbar in Firefox */
+  background-size:auto;
+  background-position: center center;
+  background-repeat: no-repeat;
+}
+
+.arrow-container {
+  height: 100%;
 }
 
 .arrow-btn {
